src/test/ui/nll/user-annotations/dump-adt-brace-struct.stderr
error: user substs: UserSubsts { substs: [u32], user_self_ty: None }
  --> $DIR/dump-adt-brace-struct.rs:18:5
   |
LL |     SomeStruct::<u32> { t: 22 }; //~ ERROR [u32]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

